k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: taskapi-staging
  labels:
    app.kubernetes.io/name: taskapi
    app.kubernetes.io/environment: staging
