k8s/base/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: taskapi
  namespace: taskapi-staging
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: taskapi
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: taskapi-staging
        - namespaceSelector:
            matchLabels:
              taskapi.dev/allow-staging-ingress: "true"
      ports:
        - protocol: TCP
          port: 3000
  egress:
    - ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    - ports:
        - protocol: TCP
          port: 5432
        - protocol: TCP
          port: 6379
